@@ -15,8 +15,8 @@
   </th>
 </else:mh_count></if:mh_count>
 <loop:headers>
-<th class="<tag:headers.class />" width="<tag:headers.width />">
-   <tag:headers.change_sort_link /> <if:sortlimit><tag:headers.sortlimit_text /><else:sortlimit><tag:headers.change_sort_widget /> <tag:headers.extra /></else:sortlimit></if:sortlimit>
+  <th class="<tag:headers.class />" width="<tag:headers.width />">
+   <tag:headers.change_sort_link /> <tag:headers.change_sort_widget /> <tag:headers.extra />
   </th>
 </loop:headers>
  </tr>
